--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!--todo:populate read me-->
 	<head>
-		<title>Slack Inivite</title>
+		<title>Slack Invite</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	</head>
-	<body class="container" style="background-color: chartreuse">
+	<body class="container" style="background-color: chartreuse;padding: 2%;margin: 2%">
         <div class="show_stuff" style="width: 100%;height: 100%">
-            <p>Invite users to you slack page</p>
+            <p class="only" style="padding: 2%;margin: 2%">Invite users to you slack page</p>
             <div class="form-group" style="height: 100%;width: 100%">
                 <label for="email">Email address</label>
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" style="width: 70%;-webkit-border-radius: 23px;-moz-border-radius: 23px;border-radius: 23px;padding: 2%;margin: 2%;">
-                <small id="emailHelp" class="form-text text-muted">Enter the email,you want to use this slack team.</small>
+                <small id="emailHelp" class="form-text text-muted" style="margin: 2%;padding: 2%">Enter the email,you want to use this slack team.</small>
                 <button type="submit" class="btn btn-primary" style="width: 20%;-webkit-border-radius: 20px;-moz-border-radius: 20px;border-radius: 20px;margin: 2%;padding: 2%">OYA,SEND ME MY INVITE</button>
             </div>
         </div>
