--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	</head>
-	<body class="container" style="background-color: chartreuse;padding: 2%;margin: 2%">
+	<body class="container" style="background-color: black;padding: 2%;margin: 2%">
         <div class="show_stuff" style="width: 100%;height: 100%">
             <p class="only" style="padding: 2%;margin: 2%">Invite users to you slack page</p>
             <div class="form-group" style="height: 100%;width: 100%">
