--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <div class="show_stuff" style="width: 100%;height: 100%">
             <p class="only" style="padding: 2%;margin: 2%">Invite users to you slack page</p>
             <div class="form-group" style="height: 100%;width: 100%">
-                <label for="email" style="padding-left: 3%;">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" style="width: 70%;-webkit-border-radius: 23px;-moz-border-radius: 23px;border-radius: 23px;padding: 2%;margin: 2%;">
-                <small id="emailHelp" class="form-text text-muted" style="padding-left: 3%"> Enter the email,you want to use this slack team.</small>
-                <button type="submit" class="btn btn-primary" style="width: auto;-webkit-border-radius: 20px;-moz-border-radius: 20px;border-radius: 20px;margin: 2%;padding: 2%">OYA,SEND ME MY INVITE</button>
+                <form action="action.php">
+                    <label for="email" style="padding-left: 3%;">Email address</label>
+                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email" style="width: 70%;-webkit-border-radius: 23px;-moz-border-radius: 23px;border-radius: 23px;padding: 2%;margin: 2%;">
+                    <small id="emailHelp" class="form-text text-muted" style="padding-left: 3%"> Enter the email,you want to use this slack team.</small>
+                    <button type="submit" class="btn btn-primary" style="width: auto;-webkit-border-radius: 20px;-moz-border-radius: 20px;border-radius: 20px;margin: 2%;padding: 2%">OYA,SEND ME MY INVITE</button>
+                </form>
+
             </div>
         </div>
 
