--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> <!--todo:populate read me--> <!--link to external file sheets -->
+<html lang="en" xmlns:https="http://www.w3.org/1999/xhtml"> <!--todo:populate read me--> <!--link to external file sheets -->
 	<head>
 		<title>Slack Invite</title>
 		<meta charset="utf-8">
@@ -8,8 +8,8 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	</head>
-	<body class="container" style="background-color: black;padding: 2%;margin: 2%">
-        <div class="show_stuff" style="width: 100%;height: 100%">
+	<body class="container" style="padding: 2%;margin: 2%;background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUuZHPGWy0430olAXdHNGw95ckQlT0QnSfVMP18PSbRqwnyjIEAg);background-repeat: no-repeat;background-size: 100% 300%;background-clip: padding-box">
+        <div class="show_stuff" style="height: auto;width: 50% ;margin-left: auto ;margin-right: auto ;padding-top: 40%;">
             <p class="only" style="padding: 2%;margin: 2%">Invite users to you slack page</p>
             <div class="form-group" style="height: 100%;width: 100%">
                 <form action="action.php">
